src/test/ui/dropck/dropck-union.nll.stderr
error[E0597]: `v` does not live long enough
  --> $DIR/dropck-union.rs:39:18
   |
LL |     v.0.set(Some(&v));
   |                  ^^ borrowed value does not live long enough
LL | }
   | -
   | |
   | `v` dropped here while still borrowed
   | borrow might be used here, when `v` is dropped and runs the `Drop` code for type `Wrap`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
